acm/user7/spring-boot-camel-complete-route.yml
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    app.openshift.io/vcs-ref: main
    jkube.io/git-branch: main
    jkube.io/scm-url: https://github.com/spring-projects/spring-boot/spring-boot-camel-complete
    jkube.io/git-url: https://github.com/seasonny/kubernetes-summit-2022-workshop.git
    app.openshift.io/vcs-uri: https://github.com/seasonny/kubernetes-summit-2022-workshop.git
    jkube.io/scm-tag: HEAD
    jkube.io/git-commit: c15726aa85a8133a183517b00735730bc83086e1
  labels:
    app: spring-boot-camel-complete
    provider: jkube
    version: 1.9.1
    group: org.eclipse.jkube.quickstarts.maven
  name: spring-boot-camel-complete
spec:
  port:
    targetPort: 8080
  to:
    kind: Service
    name: spring-boot-camel-complete
